<resources>
    <string name="app_name">สมุนไพรไทย</string>

    <string name="title_main">ฐานข้อมูลสมุนไพรไทย</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="signin">เข้าสู่ระบบ</string>
    <string name="signup">สมัครสมาชิก</string>
    <string name="guest">ผู้ใช้งานทั่วไป</string>


    <string name="name">ชื่อ</string>
    <string name="currency">สกุล</string>
    <string name="phone">เบอร์โทรศัพท์</string>
    <string name="address">ที่อยู่</string>
    <string name="title_activity_detail">Map</string>

    <string name="up_main">เพิ่มข้อมูลสมุนไพร</string>
    <string name="up_hub">ชื่อสมุนไพร</string>
    <string name="up_hub1">สรรพคุณ</string>
    <string name="up_hub2">วิธีใช้</string>
    <string name="up_hub3">พิกัด</string>

</resources>
