<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ubru.sabaipon.teerawat.apichat.herbbanban.UpdateHerb"
    android:background="@drawable/bbb2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_main"
        android:id="@+id/textView20"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_margin="20dp"
        android:layout_below="@+id/textView20">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:id="@+id/imageButton"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/up_hub"
                        android:id="@+id/textView21"
                        android:textSize="@dimen/h2"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText9"
                        android:layout_weight="2"
                        android:hint="@string/up_hub"
                        android:enabled="false"
                        android:inputType="text" />
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:id="@+id/scrollView5" >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/up_hub1"
                            android:id="@+id/textView22"
                            android:textSize="@dimen/h2"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/editText10"
                            android:hint="@string/up_hub1"
                            android:inputType="text"
                            android:textSize="@dimen/h2"
                            android:layout_weight="2" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:id="@+id/scrollView4" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/up_hub2"
                        android:id="@+id/textView23"
                        android:textSize="@dimen/h2"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText11"
                        android:hint="@string/up_hub2"
                        android:inputType="text"
                        android:layout_weight="2"
                        android:textSize="@dimen/h2" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_hub3"
                    android:id="@+id/textView25"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />
            </LinearLayout>

            <fragment
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/fragment"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
